--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/mailer": "5.4.*",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "5.4.*",
         "symfony/yaml": "5.4.*"
     },
@@ -71,5 +73,9 @@
             "require": "5.4.*",
             "docker": true
         }
+    },
+    "require-dev": {
+        "symfony/stopwatch": "5.4.*",
+        "symfony/web-profiler-bundle": "5.4.*"
     }
 }
