--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,10 @@
         "symfony/mailer": "5.4.*",
         "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "5.4.*",
-        "symfony/yaml": "5.4.*"
+        "symfony/twig-bundle": "5.4.*",
+        "symfony/yaml": "5.4.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "allow-plugins": {
