Got the makefile having env-appropriate syntax for docker compose so that the correct env files are used to bring up the containers.

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@
 ### Core
 IMAGES_PREFIX=symfony
 # https://docs.docker.com/compose/compose-file/compose-file-v3/#variable-substitution
-SERVER_NAME=symfony.local
+SERVER_NAME=localhost
 HTTP_PORT=80
 HTTPS_PORT=443
 HTTP3_PORT=443
@@ -25,7 +25,7 @@ XDEBUG_MODE=off
 
 ### Symfony
 # https://docs.docker.com/compose/compose-file/compose-file-v3/#variable-substitution
-SYMFONY_VERSION=5.4.*
+SYMFONY_VERSION=7.0.*
 STABILITY=dev
 #STABILITY=stable
 
